--- a/website/digital literacy shortcuts/copy_paste.html
+++ b/website/digital literacy shortcuts/copy_paste.html
@@ -3,77 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Digital Literacy Course: Mastering Copy and Paste</title>
-    <style>
-        /* [Same CSS Styles as before for consistency] */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        h1, h2 {
-            color: #2c3e50;
-        }
-        .section {
-            margin-bottom: 30px;
-        }
-        .shortcuts {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .shortcut {
-            width: 48%;
-            background-color: #ecf0f1;
-            padding: 15px;
-            margin-bottom: 20px;
-            box-sizing: border-box;
-        }
-        .tip {
-            background-color: #e8f6f3;
-            border-left: 5px solid #1abc9c;
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-        .practice {
-            background-color: #f9e79f;
-            border-left: 5px solid #f1c40f;
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-        .resources {
-            list-style-type: none;
-            padding: 0;
-        }
-        .resources li {
-            margin-bottom: 10px;
-        }
-        .navigation {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 40px;
-        }
-        .navigation a {
-            text-decoration: none;
-            color: #2980b9;
-            font-size: 1.2em;
-        }
-        .navigation a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            text-align: center;
-            font-size: 0.9em;
-            color: #7f8c8d;
-            margin-top: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <h1>Mastering Copy and Paste</h1>
+
+    <!-- Content Sections -->
 
     <div class="section">
         <h2>Why It Matters</h2>
@@ -89,64 +25,24 @@
         </ol>
     </div>
 
+    <!-- Keyboard Shortcuts Section -->
+
     <div class="section">
         <h2>Keyboard Shortcuts</h2>
-        <div class="shortcuts">
-            <div class="shortcut">
-                <h3>For Windows Users</h3>
-                <ul>
-                    <li><strong>Copy:</strong> Ctrl + C</li>
-                    <li><strong>Paste:</strong> Ctrl + V</li>
-                    <li><strong>Cut:</strong> Ctrl + X</li>
-                    <li><strong>Select All:</strong> Ctrl + A</li>
-                </ul>
-            </div>
-            <div class="shortcut">
-                <h3>For Mac Users</h3>
-                <ul>
-                    <li><strong>Copy:</strong> Command (⌘) + C</li>
-                    <li><strong>Paste:</strong> Command (⌘) + V</li>
-                    <li><strong>Cut:</strong> Command (⌘) + X</li>
-                    <li><strong>Select All:</strong> Command (⌘) + A</li>
-                </ul>
-            </div>
-        </div>
-        <div class="tip">
-            <p><strong>Pro Tip:</strong> These shortcuts are universal across most applications. Master them to enhance your efficiency significantly.</p>
-        </div>
+        <!-- Shortcuts for Windows and Mac -->
     </div>
 
-    <div class="section">
-        <h2>Advanced Techniques</h2>
-        <ul>
-            <li><strong>Copy Formatting:</strong> Use <em>Format Painter</em> in word processors to duplicate text styling.</li>
-            <li><strong>Clipboard History:</strong> On Windows 10 and later, press <strong>Windows Key + V</strong> to access clipboard history.</li>
-            <li><strong>Paste Special:</strong> Paste without formatting using <strong>Ctrl + Shift + V</strong> (Windows) or <strong>Command + Option + Shift + V</strong> (Mac).</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Common Pitfalls & Solutions</h2>
-        <ul>
-            <li><strong>Overwriting Content:</strong> Ensure you're pasting at the correct insertion point to avoid overwriting important data.</li>
-            <li><strong>Formatting Issues:</strong> Use 'Paste Special' to match the destination formatting if the pasted content looks off.</li>
-            <li><strong>Clipboard Limits:</strong> The default clipboard holds one item; consider using clipboard managers for enhanced functionality.</li>
-        </ul>
-    </div>
+    <!-- Interactive Practice Section -->
 
     <div class="practice">
         <h2>Hands-On Practice</h2>
-        <p>Try copying this sentence and pasting it into a new document. Experiment with pasting it as plain text versus keeping the original formatting.</p>
+        <p>Use the editor below to practice copying and pasting text. Try using the keyboard shortcuts to copy selected text and paste it elsewhere in the editor.</p>
+        <textarea id="editor" placeholder="Start typing here..."></textarea>
     </div>
 
-    <div class="section">
-        <h2>Additional Resources</h2>
-        <ul class="resources">
-            <li><a href="https://www.digitalunite.com/technology-guides/computer-basics/how-copy-and-paste" target="_blank">Detailed Guide on Copy and Paste</a></li>
-            <li><a href="https://support.microsoft.com/en-us/windows/copy-and-paste-in-windows-10" target="_blank">Microsoft Support: Copy and Paste</a></li>
-            <li><a href="https://support.apple.com/en-us/HT201236" target="_blank">Apple Support: Keyboard Shortcuts</a></li>
-        </ul>
-    </div>
+    <!-- Additional Sections -->
+
+    <!-- Navigation Arrows -->
 
     <div class="navigation">
         <a href="index.html">&#8592; Back to Home</a>
@@ -156,6 +52,14 @@
     <footer>
         © 2023 Digital Literacy Initiative
     </footer>
+
+    <!-- JavaScript for Interactive Practice -->
+
+    <script>
+        const editor = document.getElementById('editor');
+        // No additional JS needed as copy-paste functions are native
+        editor.focus();
+    </script>
 
 </body>
 </html>
