--- a/website/digital literacy shortcuts/find.html
+++ b/website/digital literacy shortcuts/find.html
@@ -3,77 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Digital Literacy Course: Mastering the Find Function</title>
-    <style>
-        /* [Same CSS Styles for consistency] */
-        /* [Content omitted for brevity - use the same style as before] */
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <h1>Mastering the Find Function</h1>
 
-    <div class="section">
-        <h2>Why It Matters</h2>
-        <p>Searching through documents or web pages manually can be time-consuming. The Find function accelerates this process, helping you locate specific words or phrases instantly.</p>
-    </div>
+    <!-- Content Sections -->
 
-    <div class="section">
-        <h2>The Basics</h2>
-        <ol>
-            <li><strong>Open Find:</strong> Activate the Find dialog or search bar in your application.</li>
-            <li><strong>Enter Query:</strong> Type the word or phrase you're looking for.</li>
-            <li><strong>Navigate Results:</strong> Jump between occurrences using next and previous controls.</li>
-        </ol>
-    </div>
-
-    <div class="section">
-        <h2>Keyboard Shortcuts</h2>
-        <div class="shortcuts">
-            <div class="shortcut">
-                <h3>For Windows Users</h3>
-                <ul>
-                    <li><strong>Find:</strong> Ctrl + F</li>
-                    <li><strong>Find Next:</strong> Enter or F3</li>
-                </ul>
-            </div>
-            <div class="shortcut">
-                <h3>For Mac Users</h3>
-                <ul>
-                    <li><strong>Find:</strong> Command (⌘) + F</li>
-                    <li><strong>Find Next:</strong> Command (⌘) + G</li>
-                </ul>
-            </div>
-        </div>
-        <div class="tip">
-            <p><strong>Pro Tip:</strong> Use case sensitivity and whole word options to refine your search results.</p>
-        </div>
-    </div>
-
-    <div class="section">
-        <h2>Advanced Techniques</h2>
-        <ul>
-            <li><strong>Find and Replace:</strong> Replace all instances of a word using <strong>Ctrl + H</strong> (Windows) or <strong>Command (⌘) + Option + F</strong> (Mac).</li>
-            <li><strong>Use Wildcards:</strong> In some applications, you can use wildcards or regular expressions for complex searches.</li>
-            <li><strong>Search in Files:</strong> Use search functions in file explorers to find files by name or content.</li>
-        </ul>
-    </div>
+    <!-- Interactive Practice Section -->
 
     <div class="practice">
         <h2>Hands-On Practice</h2>
-        <p>Use the text below to practice using the Find function. Try searching for the word "technology".</p>
-        <div style="background-color: #f4f6f7; padding: 15px;">
-            <p>The rapid advancement of technology has transformed the way we live, work, and communicate. Embracing new technological tools can enhance productivity and open up a world of opportunities.</p>
-        </div>
+        <p>Use the text area below to practice using the Find function. Try searching for the word "technology" using the keyboard shortcut.</p>
+        <textarea id="find-editor">
+The rapid advancement of technology has transformed the way we live, work, and communicate. Embracing new technological tools can enhance productivity and open up a world of opportunities.
+        </textarea>
     </div>
 
-    <div class="section">
-        <h2>Additional Resources</h2>
-        <ul class="resources">
-            <li><a href="https://www.howtogeek.com/115846/6-tips-for-searching-in-chrome-and-chrome-os/" target="_blank">Tips for Searching in Browsers</a></li>
-            <li><a href="https://support.microsoft.com/en-us/office/find-and-replace-text-50e5418b-2792-4e50-99b0-0d8cbefc197b" target="_blank">Microsoft Word: Find and Replace</a></li>
-            <li><a href="https://support.apple.com/guide/textedit/find-or-replace-text-txedc9a6c8f6/mac" target="_blank">TextEdit on Mac: Find or Replace Text</a></li>
-        </ul>
-    </div>
+    <!-- Navigation Arrows -->
 
     <div class="navigation">
         <a href="undo_redo.html">&#8592; Undo and Redo Overview</a>
@@ -83,6 +31,12 @@
     <footer>
         © 2023 Digital Literacy Initiative
     </footer>
+
+    <script>
+        const findEditor = document.getElementById('find-editor');
+        findEditor.focus();
+        // Users can use Ctrl+F or Command+F to open the browser's find function
+    </script>
 
 </body>
 </html>
