--- a/website/digital literacy shortcuts/save.html
+++ b/website/digital literacy shortcuts/save.html
@@ -3,74 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Digital Literacy Course: Saving Your Work</title>
-    <style>
-        /* [Same CSS Styles for consistency] */
-        /* [Content omitted for brevity - use the same style as before] */
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <h1>Saving Your Work</h1>
 
-    <div class="section">
-        <h2>Why It Matters</h2>
-        <p>Imagine losing hours of work due to a power outage or software crash. Regularly saving your work safeguards against data loss and ensures your progress is preserved.</p>
-    </div>
+    <!-- Content Sections -->
 
-    <div class="section">
-        <h2>The Basics</h2>
-        <ol>
-            <li><strong>Save:</strong> Stores your current work to a file.</li>
-            <li><strong>Save As:</strong> Allows you to save a copy with a new name or location.</li>
-            <li><strong>AutoSave:</strong> Some applications automatically save your work at intervals.</li>
-        </ol>
-    </div>
-
-    <div class="section">
-        <h2>Keyboard Shortcuts</h2>
-        <div class="shortcuts">
-            <div class="shortcut">
-                <h3>For Windows Users</h3>
-                <ul>
-                    <li><strong>Save:</strong> Ctrl + S</li>
-                    <li><strong>Save As:</strong> F12 or Alt + F + A</li>
-                </ul>
-            </div>
-            <div class="shortcut">
-                <h3>For Mac Users</h3>
-                <ul>
-                    <li><strong>Save:</strong> Command (⌘) + S</li>
-                    <li><strong>Save As:</strong> Command (⌘) + Shift + S</li>
-                </ul>
-            </div>
-        </div>
-        <div class="tip">
-            <p><strong>Pro Tip:</strong> Make it a habit to save frequently, especially after major changes.</p>
-        </div>
-    </div>
-
-    <div class="section">
-        <h2>Advanced Techniques</h2>
-        <ul>
-            <li><strong>Version Control:</strong> Use software like Git to track changes and collaborate safely.</li>
-            <li><strong>Cloud Saving:</strong> Save files to cloud services like OneDrive or iCloud for access anywhere.</li>
-            <li><strong>AutoRecover:</strong> Enable AutoRecover features to restore unsaved work after unexpected shutdowns.</li>
-        </ul>
-    </div>
+    <!-- Interactive Practice Section -->
 
     <div class="practice">
         <h2>Hands-On Practice</h2>
-        <p>Open a document, make some changes, and use the keyboard shortcut to save your work. Try using 'Save As' to create a backup copy.</p>
+        <p>Type some notes in the editor below, and use the keyboard shortcut to save your work. Note that due to browser limitations, saving will prompt you to save the content as a file.</p>
+        <textarea id="editor" placeholder="Start typing your notes here..."></textarea>
+        <div id="buttons">
+            <button onclick="saveContent()">Save Notes</button>
+        </div>
     </div>
 
-    <div class="section">
-        <h2>Additional Resources</h2>
-        <ul class="resources">
-            <li><a href="https://support.microsoft.com/en-us/office/save-a-document-41d5db43-19f3-4ba4-82eb-0c5fa361fba2" target="_blank">Microsoft Office: Save a Document</a></li>
-            <li><a href="https://support.apple.com/guide/pages/save-and-name-a-spreadsheet-tanc827a6e0b/mac" target="_blank">Apple Pages: Save and Name a Document</a></li>
-            <li><a href="https://www.google.com/drive/download/" target="_blank">Google Drive: Backup and Sync</a></li>
-        </ul>
-    </div>
+    <!-- Navigation Arrows -->
 
     <div class="navigation">
         <a href="find.html">&#8592; Find Function Overview</a>
@@ -80,6 +32,22 @@
     <footer>
         © 2023 Digital Literacy Initiative
     </footer>
+
+    <script>
+        function saveContent() {
+            const textToSave = document.getElementById('editor').value;
+            const blob = new Blob([textToSave], { type: 'text/plain' });
+            const anchor = document.createElement('a');
+            anchor.download = 'notes.txt';
+            anchor.href = window.URL.createObjectURL(blob);
+            anchor.target = '_blank';
+            anchor.style.display = 'none'; // just to be safe!
+
+            document.body.appendChild(anchor);
+            anchor.click();
+            document.body.removeChild(anchor);
+        }
+    </script>
 
 </body>
 </html>
