--- a/website/digital literacy shortcuts/select_all.html
+++ b/website/digital literacy shortcuts/select_all.html
@@ -25,7 +25,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor i
 
     <div class="navigation">
         <a href="save.html">&#8592; Saving Your Work</a>
-        <a href="index.html">Back to Home &#8594;</a>
+        <a href="website/quiz.html">Start the quiz &#8594;</a>
     </div>
 
     <footer>
