--- a/website/digital literacy shortcuts/copy_paste.html
+++ b/website/digital literacy shortcuts/copy_paste.html
@@ -45,7 +45,7 @@
     <!-- Navigation Arrows -->
 
     <div class="navigation">
-        <a href="index.html">&#8592; Back to Home</a>
+        <a href="website/index.html">&#8592; Back to Home</a>
         <a href="undo_redo.html">Undo and Redo Overview &#8594;</a>
     </div>
 
