--- a/website/digital literacy shortcuts/find.html
+++ b/website/digital literacy shortcuts/find.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="UTF-8">
     <title>Digital Literacy Course: Mastering the Find Function</title>
     <link rel="stylesheet" href="styles.css">
