--- a/website/digital literacy shortcuts/find.html
+++ b/website/digital literacy shortcuts/find.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="UTF-8">
     <title>Digital Literacy Course: Mastering the Find Function</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
 
