--- a/website/digital literacy shortcuts/select_all.html
+++ b/website/digital literacy shortcuts/select_all.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Digital Literacy Course: Selecting All Content</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
 
